[package]
name = "allkiri"
version = "0.0.0"
edition = "2024"
description = "Estonian digital signature creation and validation"
license = "Apache-2.0"
homepage = "https://github.com/takakv/allkiri"
repository = "https://github.com/takakv/allkiri"
keywords = ["digidoc", "asice", "xades", "eidas", "bdoc"]
categories = ["cryptography"]

[features]
default = ["network"]
network = ["xades/network"]

[dependencies]
asic-e = "0.1.1"
thiserror = "2.0.18"
xades = "0.2.1"

[patch.crates-io]
xades = { git = "https://github.com/takakv/rust-xades.git" }
